# EncryptShare

./: .gitignore  README.md
sdk/: CMakeLists.txt
sdk/clang/: CMakeLists.txt  sm2.c  sm2.h  sm4.c  sm4.h
sdk/clang/src/: CMakeLists.txt  IClangAPI.h  dllmain.c  imytest.c  ism2.c  ism4.c  logrecord.c  logrecord.h
sdk/clang/src/ccrypto/: CMakeLists.txt  iccrypto.h  ifile.c  ipkcs7.c  ism2.c  ism3.c  ism4.c
sdk/clang/src/ccrypto/test/: CMakeLists.txt  main.c
sdk/clang/src/keydll/: ikey.h
sdk/clang/src/test/: CMakeLists.txt  clang_test.c
sdk/clang/src/utils/: log.c  log.h
sdk/clang/test/: CMakeLists.txt  clang_test.c
sdk/clang/third_libs/windows/GmSSL32/include/openssl/: ec_lcl.h  opensslconf.h
sdk/clang/third_libs/windows/GmSSL32/lib/: libcrypto.lib  libssl.lib
